# bdenc

./: .gitignore  default.nix
src/: CMakeLists.txt  main.cpp
